[metadata]
name = Table2XSV
version = attr: table2xsv.__version__
url = attr: table2xsv.__url__
author = attr: table2xsv.__author__
author_email = attr: table2xsv.__author_email__
license = MIT
platform = any
description = Convert Tabular Data to XSV
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/amoghmadan/Table2XSV

[options]
python_requires = >=3.7.*, <=3.9.*
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pandas==1.3.3

[options.entry_points]
console_scripts =
    Table2XSV = table2xsv.main:main

[options.extras_require]
all =
    odfpy==1.4.1
    openpyxl==3.0.9
    pyxlsb==1.0.8
    xlrd==2.0.1
    mysqlclient==2.0.3
    neo4j==4.3.5
excel =
    odfpy==1.4.1
    openpyxl==3.0.9
    pyxlsb==1.0.8
    xlrd==2.0.1
mysql =
    mysqlclient==2.0.3
neo4j =
    neo4j==4.3.5
