[metadata]
name = Table2XSV
version = attr: table2xsv.__version__
url = https://github.com/amoghmadan/Table2XSV
author = Amogh Madan
author_email = amoghmadaan@gmail.com
license = MIT
platform = any
description = Convert Tabular Data to XSV
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/amoghmadan/Table2XSV

[options]
package_dir = =src
packages = find_namespace:
python_requires = >=3.7, <3.11
include_package_data = true
install_requires =
    numpy==1.21.4
    pandas==1.3.4
    python-dateutil==2.8.2
    pytz==2021.3
    six==1.16.0
zip_safe = false

[options.packages.find]
where = src
exclude =
    main.py

[options.entry_points]
console_scripts =
    Table2XSV = table2xsv.bin:execute_from_command_line

[options.extras_require]
all =
    defusedxml==0.7.1
    et-xmlfile==1.1.0
    odfpy==1.4.1
    openpyxl==3.0.9
    pyxlsb==1.0.9
    xlrd==2.0.1
    mysqlclient==2.1.0
    pytz==2021.3
    neo4j==4.4.0
excel =
    defusedxml==0.7.1
    et-xmlfile==1.1.0
    odfpy==1.4.1
    openpyxl==3.0.9
    pyxlsb==1.0.9
    xlrd==2.0.1
mysql =
    mysqlclient==2.1.0
neo4j =
    pytz==2021.3
    neo4j==4.4.0
