# Inside of setup.cfg
[metadata]
name = Table2XSV
version = attr: main.__version__
url = https://github.com/amoghmadan/Table2XSV
author = Amogh Madan
author_email = amoghmadaan@gmail.com
license = MIT
platform = any
description = Table 2 XSV
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://github.com/amoghmadan/Table2XSV

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    mysqlclient
    neo4j
    odfpy
    openpyxl
    pandas
    pyxlsb
    SQLAlchemy
    xlrd

[options.entry_points]
console_scripts =
    Table2XSV = main:execute
